fix all swagger documentation issues
